Lang: Updated Language Files. (#50)
* New translations strings.xml (Czech)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (German)

* New translations strings.xml (Czech)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (German)

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -65,9 +65,11 @@
     <string name="settings_manager_favorite">Lieblings-Apps</string>
     <string name="settings_manager_hidden">Versteckte Apps</string>
     <string name="settings_select_wallpaper">Hintergrundbild auswählen</string>
-    <string name="settings_double_tap_lock">Zum Sperren doppeltippen</string>
-    <string name="settings_swipe_down_notification">Wischen Sie nach unten, um die Benachrichtigung zu erweitern</string>
-    <string name="settings_swipe_up_search">Nach oben wischen, um die Suchansicht zu öffnen</string>
+    <string name="settings_double_tap">Doppeltippen</string>
+    <string name="settings_swipe_up">Nach oben wischen</string>
+    <string name="settings_swipe_down">Nach unten wischen</string>
+    <string name="settings_swipe_left">Nach links wischen</string>
+    <string name="settings_swipe_right">Wische nach rechts</string>
     <string name="settings_search_engine">Suchmaschine</string>
     <string name="settings_others_share">Aktie</string>
     <string name="settings_others_feedback">Rückmeldung</string>
@@ -76,6 +78,16 @@
     <string name="settings_backups_restore">Einstellungen wiederherstellen</string>
     <string name="settings_reload_app_backup">Einstellungen gesichert.</string>
     <string name="settings_reload_app_restore">Einstellungen wiederhergestellt. Neustart.</string>
+    <string name="settings_actions_open_app">Öffne App</string>
+    <string name="settings_actions_lock_screen">Sperrbildschirm</string>
+    <string name="settings_actions_show_notifications">Zeige Benachrichtigungen</string>
+    <string name="settings_actions_show_app_list">Apps-Liste anzeigen</string>
+    <string name="settings_actions_show_favorite_list">Favoritenliste anzeigen</string>
+    <string name="settings_actions_open_quick_settings">Schnelleinstellungen öffnen</string>
+    <string name="settings_actions_show_recents">Zuletzt verwendetes anzeigen</string>
+    <string name="settings_actions_open_power_dialog">Dialogfeld „Power“ öffnen</string>
+    <string name="settings_actions_take_a_screenshot">Mach ein Bildschirmfoto</string>
+    <string name="settings_actions_disabled">Deaktiviert</string>
     <string name="authentication_title">Authentifizierung</string>
     <string name="authentication_subtitle">Melden Sie sich mit Ihren biometrischen Anmeldeinformationen an.</string>
     <string name="authentication_cancel">Authentifizierung Abbrechen</string>
