--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -65,9 +65,11 @@
     <string name="settings_manager_favorite">App preferite</string>
     <string name="settings_manager_hidden">App nascoste</string>
     <string name="settings_select_wallpaper">Seleziona Sfondo</string>
-    <string name="settings_double_tap_lock">Tocca due volte per bloccare</string>
-    <string name="settings_swipe_down_notification">Scorri verso il basso per espandere la notifica</string>
-    <string name="settings_swipe_up_search">Scorri verso l\'alto per aprire la visualizzazione di ricerca</string>
+    <string name="settings_double_tap">Doppio tocco</string>
+    <string name="settings_swipe_up">Scorrere verso l\'alto</string>
+    <string name="settings_swipe_down">Scorri verso il basso</string>
+    <string name="settings_swipe_left">Scorrere verso sinistra</string>
+    <string name="settings_swipe_right">Scorri verso destra</string>
     <string name="settings_search_engine">Motore di ricerca</string>
     <string name="settings_others_share">Condividere</string>
     <string name="settings_others_feedback">Feedback</string>
@@ -76,6 +78,16 @@
     <string name="settings_backups_restore">Ripristina preferenze</string>
     <string name="settings_reload_app_backup">Backup delle preferenze.</string>
     <string name="settings_reload_app_restore">Preferenze ripristinate. Riavvio.</string>
+    <string name="settings_actions_open_app">Apri l\'app</string>
+    <string name="settings_actions_lock_screen">Blocca schermo</string>
+    <string name="settings_actions_show_notifications">Mostra notifiche</string>
+    <string name="settings_actions_show_app_list">Mostra elenco app</string>
+    <string name="settings_actions_show_favorite_list">Mostra elenco preferiti</string>
+    <string name="settings_actions_open_quick_settings">Apri Impostazioni rapide</string>
+    <string name="settings_actions_show_recents">Mostra recenti</string>
+    <string name="settings_actions_open_power_dialog">Apri la finestra di dialogo di alimentazione</string>
+    <string name="settings_actions_take_a_screenshot">Fai uno screenshot</string>
+    <string name="settings_actions_disabled">Disabilitato</string>
     <string name="authentication_title">Autenticazione</string>
     <string name="authentication_subtitle">Accedi utilizzando le tue credenziali biometriche.</string>
     <string name="authentication_cancel">Autenticazione Annulla</string>
