--- a/app/src/main/res/values-lt-rLT/strings.xml
+++ b/app/src/main/res/values-lt-rLT/strings.xml
@@ -65,9 +65,11 @@
     <string name="settings_manager_favorite">Mėgstamiausios programos</string>
     <string name="settings_manager_hidden">Paslėptos programos</string>
     <string name="settings_select_wallpaper">Pasirinkite Fono paveikslėlis</string>
-    <string name="settings_double_tap_lock">Dukart palieskite, kad užrakintumėte</string>
-    <string name="settings_swipe_down_notification">Braukite žemyn, išskleiskite pranešimą</string>
-    <string name="settings_swipe_up_search">Braukite aukštyn, kad atidarytumėte paieškos rodinį</string>
+    <string name="settings_double_tap">Dukart paspausti</string>
+    <string name="settings_swipe_up">Braukite aukštyn</string>
+    <string name="settings_swipe_down">Braukite žemyn</string>
+    <string name="settings_swipe_left">Braukite kairėn</string>
+    <string name="settings_swipe_right">Braukite dešinėn</string>
     <string name="settings_search_engine">Paieškos variklis</string>
     <string name="settings_others_share">Dalintis</string>
     <string name="settings_others_feedback">Atsiliepimas</string>
@@ -76,6 +78,16 @@
     <string name="settings_backups_restore">Atkurti nuostatas</string>
     <string name="settings_reload_app_backup">Nuostatų atsarginė kopija sukurta.</string>
     <string name="settings_reload_app_restore">Parinktys atkurtos. Paleidimas iš naujo.</string>
+    <string name="settings_actions_open_app">Atidarykite programą</string>
+    <string name="settings_actions_lock_screen">Užrakinti ekraną</string>
+    <string name="settings_actions_show_notifications">Rodyti pranešimus</string>
+    <string name="settings_actions_show_app_list">Rodyti programų sąrašą</string>
+    <string name="settings_actions_show_favorite_list">Rodyti mėgstamiausių sąrašą</string>
+    <string name="settings_actions_open_quick_settings">Atidarykite sparčiuosius nustatymus</string>
+    <string name="settings_actions_show_recents">Rodyti naujausius</string>
+    <string name="settings_actions_open_power_dialog">Atidarykite maitinimo dialogo langą</string>
+    <string name="settings_actions_take_a_screenshot">Padarykite ekrano kopiją</string>
+    <string name="settings_actions_disabled">Išjungta</string>
     <string name="authentication_title">Autentifikavimas</string>
     <string name="authentication_subtitle">Prisijunkite naudodami biometrinius kredencialus.</string>
     <string name="authentication_cancel">Autentifikavimo atšaukimas</string>
