--- a/app/src/main/res/values-sk-rSK/strings.xml
+++ b/app/src/main/res/values-sk-rSK/strings.xml
@@ -65,9 +65,11 @@
     <string name="settings_manager_favorite">Obľúbené aplikácie</string>
     <string name="settings_manager_hidden">Skryté aplikácie</string>
     <string name="settings_select_wallpaper">Vyberte položku Tapeta</string>
-    <string name="settings_double_tap_lock">Dvojitým klepnutím uzamknete</string>
-    <string name="settings_swipe_down_notification">Potiahnutím nadol rozbaliť upozornenie</string>
-    <string name="settings_swipe_up_search">Potiahnutím nahor otvorte zobrazenie vyhľadávania</string>
+    <string name="settings_double_tap">Dvojité poklepanie</string>
+    <string name="settings_swipe_up">Potiahnite hore</string>
+    <string name="settings_swipe_down">Potiahnite prstom smerom nadol</string>
+    <string name="settings_swipe_left">Potiahnite prstom doľava</string>
+    <string name="settings_swipe_right">Prejdite prstom doprava</string>
     <string name="settings_search_engine">Vyhľadávač</string>
     <string name="settings_others_share">zdieľam</string>
     <string name="settings_others_feedback">Spätná väzba</string>
@@ -76,6 +78,16 @@
     <string name="settings_backups_restore">Obnoviť predvoľby</string>
     <string name="settings_reload_app_backup">Predvoľby sú zálohované.</string>
     <string name="settings_reload_app_restore">Predvoľby boli obnovené. Reštartovanie.</string>
+    <string name="settings_actions_open_app">Otvorte aplikáciu</string>
+    <string name="settings_actions_lock_screen">Zamknúť obrazovku</string>
+    <string name="settings_actions_show_notifications">Zobraziť upozornenia</string>
+    <string name="settings_actions_show_app_list">Zobraziť zoznam aplikácií</string>
+    <string name="settings_actions_show_favorite_list">Zobraziť zoznam obľúbených</string>
+    <string name="settings_actions_open_quick_settings">Otvorte Rýchle nastavenia</string>
+    <string name="settings_actions_show_recents">Zobraziť Nedávne</string>
+    <string name="settings_actions_open_power_dialog">Otvorte dialógové okno napájania</string>
+    <string name="settings_actions_take_a_screenshot">Urobte snímku obrazovky</string>
+    <string name="settings_actions_disabled">Zakázané</string>
     <string name="authentication_title">Overenie</string>
     <string name="authentication_subtitle">Prihláste sa pomocou svojich biometrických údajov.</string>
     <string name="authentication_cancel">Zrušenie overenia</string>
