--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -65,9 +65,11 @@
     <string name="settings_manager_favorite">יישומים מועדפים</string>
     <string name="settings_manager_hidden">יישומים מוסתרים</string>
     <string name="settings_select_wallpaper">בחר תמונת רקע</string>
-    <string name="settings_double_tap_lock">הקש פעמיים כדי לנעול</string>
-    <string name="settings_swipe_down_notification">החלק מטה התראה על הרחבה</string>
-    <string name="settings_swipe_up_search">החלק למעלה תצוגת חיפוש פתוחה</string>
+    <string name="settings_double_tap">הקשה כפולה</string>
+    <string name="settings_swipe_up">החלק למעלה</string>
+    <string name="settings_swipe_down">החלק למטה</string>
+    <string name="settings_swipe_left">החלק שמאלה</string>
+    <string name="settings_swipe_right">החלק ימינה</string>
     <string name="settings_search_engine">מנוע חיפוש</string>
     <string name="settings_others_share">שיתוף</string>
     <string name="settings_others_feedback">משוב</string>
@@ -76,6 +78,16 @@
     <string name="settings_backups_restore">שחזר העדפות</string>
     <string name="settings_reload_app_backup">העדפות מגובות.</string>
     <string name="settings_reload_app_restore">ההעדפות שוחזרו. מופעל מחדש.</string>
+    <string name="settings_actions_open_app">אפליקציה פתוחה</string>
+    <string name="settings_actions_lock_screen">מסך נעילה</string>
+    <string name="settings_actions_show_notifications">תראה התראות</string>
+    <string name="settings_actions_show_app_list">הצג רשימת אפליקציות</string>
+    <string name="settings_actions_show_favorite_list">הצג רשימת מועדפים</string>
+    <string name="settings_actions_open_quick_settings">פתח את ההגדרות המהירות</string>
+    <string name="settings_actions_show_recents">הצג אחרונים</string>
+    <string name="settings_actions_open_power_dialog">פתח את תיבת הכוח</string>
+    <string name="settings_actions_take_a_screenshot">צלם מסך</string>
+    <string name="settings_actions_disabled">נָכֶה</string>
     <string name="authentication_title">אימות</string>
     <string name="authentication_subtitle">היכנס באמצעות האישורים הביומטריים שלך.</string>
     <string name="authentication_cancel">ביטול האימות</string>
