--- a/app/src/main/res/values-nl-rNL/strings.xml
+++ b/app/src/main/res/values-nl-rNL/strings.xml
@@ -65,9 +65,11 @@
     <string name="settings_manager_favorite">Favoriete apps</string>
     <string name="settings_manager_hidden">Verborgen apps</string>
     <string name="settings_select_wallpaper">Selecteer Achtergrond</string>
-    <string name="settings_double_tap_lock">Dubbeltik om te vergrendelen</string>
-    <string name="settings_swipe_down_notification">Veeg naar beneden en vouw de melding uit</string>
-    <string name="settings_swipe_up_search">Veeg omhoog om de zoekweergave te openen</string>
+    <string name="settings_double_tap">Dubbeltik</string>
+    <string name="settings_swipe_up">Omhoog scrollen</string>
+    <string name="settings_swipe_down">Naar beneden swipen</string>
+    <string name="settings_swipe_left">Veeg naar links</string>
+    <string name="settings_swipe_right">Veeg naar rechts</string>
     <string name="settings_search_engine">Zoekmachine</string>
     <string name="settings_others_share">Deel</string>
     <string name="settings_others_feedback">Feedback</string>
@@ -76,6 +78,16 @@
     <string name="settings_backups_restore">Voorkeuren herstellen</string>
     <string name="settings_reload_app_backup">Er is een back-up gemaakt van voorkeuren.</string>
     <string name="settings_reload_app_restore">Voorkeuren hersteld. Opnieuw opstarten.</string>
+    <string name="settings_actions_open_app">Open app</string>
+    <string name="settings_actions_lock_screen">Vergrendel scherm</string>
+    <string name="settings_actions_show_notifications">Toon meldingen</string>
+    <string name="settings_actions_show_app_list">Toon appslijst</string>
+    <string name="settings_actions_show_favorite_list">Favorietenlijst weergeven</string>
+    <string name="settings_actions_open_quick_settings">Open Snelle instellingen</string>
+    <string name="settings_actions_show_recents">Toon recent</string>
+    <string name="settings_actions_open_power_dialog">Open het energiedialoogvenster</string>
+    <string name="settings_actions_take_a_screenshot">Maak een screenshot</string>
+    <string name="settings_actions_disabled">Gehandicapt</string>
     <string name="authentication_title">Authenticatie</string>
     <string name="authentication_subtitle">Log in met uw biometrische gegevens.</string>
     <string name="authentication_cancel">Authenticatie Annuleren</string>
