--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -65,9 +65,11 @@
     <string name="settings_manager_favorite">Улюблені програми</string>
     <string name="settings_manager_hidden">Приховані програми</string>
     <string name="settings_select_wallpaper">Виберіть Шпалери</string>
-    <string name="settings_double_tap_lock">Двічі торкніться, щоб заблокувати</string>
-    <string name="settings_swipe_down_notification">Проведіть пальцем вниз, розгорніть сповіщення</string>
-    <string name="settings_swipe_up_search">Проведіть пальцем угору, щоб відкрити вікно пошуку</string>
+    <string name="settings_double_tap">Двічі натисніть</string>
+    <string name="settings_swipe_up">Проведіть пальцем вгору</string>
+    <string name="settings_swipe_down">Проведіть пальцем вниз</string>
+    <string name="settings_swipe_left">Проведіть вліво</string>
+    <string name="settings_swipe_right">Проведіть праворуч</string>
     <string name="settings_search_engine">Пошукова система</string>
     <string name="settings_others_share">Поділіться</string>
     <string name="settings_others_feedback">Зворотній зв\'язок</string>
@@ -76,6 +78,16 @@
     <string name="settings_backups_restore">Відновити налаштування</string>
     <string name="settings_reload_app_backup">Налаштування створено.</string>
     <string name="settings_reload_app_restore">Налаштування відновлено. Перезапуск.</string>
+    <string name="settings_actions_open_app">Відкрийте додаток</string>
+    <string name="settings_actions_lock_screen">Екран блокування</string>
+    <string name="settings_actions_show_notifications">Показати сповіщення</string>
+    <string name="settings_actions_show_app_list">Показати список програм</string>
+    <string name="settings_actions_show_favorite_list">Показати список уподобань</string>
+    <string name="settings_actions_open_quick_settings">Відкрийте швидкі налаштування</string>
+    <string name="settings_actions_show_recents">Показати останні</string>
+    <string name="settings_actions_open_power_dialog">Відкрити діалог живлення</string>
+    <string name="settings_actions_take_a_screenshot">Зробіть знімок екрана</string>
+    <string name="settings_actions_disabled">Вимкнено</string>
     <string name="authentication_title">Аутентифікація</string>
     <string name="authentication_subtitle">Увійдіть, використовуючи свої біометричні облікові дані.</string>
     <string name="authentication_cancel">Автентифікація Скасувати</string>
