--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,6 +102,7 @@
     <string name="settings_actions_show_favorite_list">Show Favorites List</string>
     <string name="settings_actions_open_quick_settings">Open Quick Settings</string>
     <string name="settings_actions_show_recents">Show Recents</string>
+    <string name="settings_actions_show_widgets">Show Widgets</string>
     <string name="settings_actions_open_power_dialog">Open Power Dialog</string>
     <string name="settings_actions_take_a_screenshot">Take a ScreenShot</string>
     <string name="settings_actions_disabled">Disabled</string>
