Lang: Updated Language Files. (#52)
* New translations strings.xml (Czech)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (German)

* New translations strings.xml (Czech)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (German)

* New translations strings.xml (Czech)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (German)

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -12,7 +12,6 @@
     <!-- Strings used for fragments header labels -->
     <string name="favorite_fragment_name">Lieblings-Apps</string>
     <string name="hidden_fragment_name">Versteckte Apps</string>
-    <string name="battery_level">%s%%</string>
     <string name="search">Suchen</string>
     <string name="bottom_dialog_app_rename">Umbenennen</string>
     <string name="bottom_dialog_add_to_home">Zum Startbildschirm hinzufügen</string>
@@ -62,6 +61,8 @@
     <string name="appearance_bottom_dialog_desc_app">App\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_word">Wort\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_battery">Batterie\u0020:\u0020 </string>
+    <string name="appearance_bottom_dialog_desc_widget_background">Widget-Hintergrund\u0020:\u0020</string>
+    <string name="appearance_bottom_dialog_desc_widget_text">Widget-Text\u0020:\u0020</string>
     <string name="settings_manager_favorite">Lieblings-Apps</string>
     <string name="settings_manager_hidden">Versteckte Apps</string>
     <string name="settings_select_wallpaper">Hintergrundbild auswählen</string>
@@ -85,10 +86,12 @@
     <string name="settings_actions_show_favorite_list">Favoritenliste anzeigen</string>
     <string name="settings_actions_open_quick_settings">Schnelleinstellungen öffnen</string>
     <string name="settings_actions_show_recents">Zuletzt verwendetes anzeigen</string>
-    <string name="settings_actions_show_widgets">Show Widgets</string>
+    <string name="settings_actions_show_widgets">Widgets anzeigen</string>
     <string name="settings_actions_open_power_dialog">Dialogfeld „Power“ öffnen</string>
     <string name="settings_actions_take_a_screenshot">Mach ein Bildschirmfoto</string>
     <string name="settings_actions_disabled">Deaktiviert</string>
+    <string name="settings_units_metric">Metrisch</string>
+    <string name="settings_units_imperial">Kaiserliche</string>
     <string name="authentication_title">Authentifizierung</string>
     <string name="authentication_subtitle">Melden Sie sich mit Ihren biometrischen Anmeldeinformationen an.</string>
     <string name="authentication_cancel">Authentifizierung Abbrechen</string>
