--- a/app/src/main/res/values-lt-rLT/strings.xml
+++ b/app/src/main/res/values-lt-rLT/strings.xml
@@ -12,7 +12,6 @@
     <!-- Strings used for fragments header labels -->
     <string name="favorite_fragment_name">Mėgstamiausios programos</string>
     <string name="hidden_fragment_name">Paslėptos programos</string>
-    <string name="battery_level">%s%%</string>
     <string name="search">Paieška</string>
     <string name="bottom_dialog_app_rename">Pervardyti</string>
     <string name="bottom_dialog_add_to_home">Pridėti prie pagrindinio ekrano</string>
@@ -62,6 +61,8 @@
     <string name="appearance_bottom_dialog_desc_app">Programa\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_word">Žodis\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_battery">Baterija\u0020:\u0020 </string>
+    <string name="appearance_bottom_dialog_desc_widget_background">Valdiklio fonas\u0020:\u0020</string>
+    <string name="appearance_bottom_dialog_desc_widget_text">Valdiklio tekstas\u0020:\u0020</string>
     <string name="settings_manager_favorite">Mėgstamiausios programos</string>
     <string name="settings_manager_hidden">Paslėptos programos</string>
     <string name="settings_select_wallpaper">Pasirinkite Fono paveikslėlis</string>
@@ -85,10 +86,12 @@
     <string name="settings_actions_show_favorite_list">Rodyti mėgstamiausių sąrašą</string>
     <string name="settings_actions_open_quick_settings">Atidarykite sparčiuosius nustatymus</string>
     <string name="settings_actions_show_recents">Rodyti naujausius</string>
-    <string name="settings_actions_show_widgets">Show Widgets</string>
+    <string name="settings_actions_show_widgets">Rodyti valdiklius</string>
     <string name="settings_actions_open_power_dialog">Atidarykite maitinimo dialogo langą</string>
     <string name="settings_actions_take_a_screenshot">Padarykite ekrano kopiją</string>
     <string name="settings_actions_disabled">Išjungta</string>
+    <string name="settings_units_metric">Metrika</string>
+    <string name="settings_units_imperial">Imperatoriškasis</string>
     <string name="authentication_title">Autentifikavimas</string>
     <string name="authentication_subtitle">Prisijunkite naudodami biometrinius kredencialus.</string>
     <string name="authentication_cancel">Autentifikavimo atšaukimas</string>
