Lang: Updated Language Files. (#60)
* New translations strings.xml (Czech)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (German)

* New translations strings.xml (Czech)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (German)

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -570,4 +570,10 @@
     <string name="search_bing">Bing</string>
     <string name="search_brave">Mutig</string>
     <string name="search_swisscow">Schweizer Kühe</string>
+    <string name="widgets_battery_level">Batteriestand: %d%%</string>
+    <string name="widgets_battery_count">Anzahl der Batterieladungen: %1$d</string>
+    <string name="widgets_battery_status">Ladestatus: %1$s</string>
+    <string name="widgets_battery_health">Batteriezustand: %1$s</string>
+    <string name="widgets_battery_voltage">Batteriespannung: %1$d %2$s</string>
+    <string name="widgets_battery_temperature">Batterietemperatur: %1$d %2$s</string>
 </resources>
