--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -570,4 +570,10 @@
     <string name="search_bing">בינג</string>
     <string name="search_brave">אַמִיץ</string>
     <string name="search_swisscow">SwissCows</string>
+    <string name="widgets_battery_level">רמת סוללה: %d%%</string>
+    <string name="widgets_battery_count">ספירת טעינת סוללה: %1$d</string>
+    <string name="widgets_battery_status">מצב טעינה: %1$s</string>
+    <string name="widgets_battery_health">בריאות הסוללה: %1$s</string>
+    <string name="widgets_battery_voltage">מתח סוללה: %1$d %2$s</string>
+    <string name="widgets_battery_temperature">טמפרטורת הסוללה: %1$d %2$s</string>
 </resources>
