--- a/app/src/main/res/values-lt-rLT/strings.xml
+++ b/app/src/main/res/values-lt-rLT/strings.xml
@@ -570,4 +570,10 @@
     <string name="search_bing">Bing</string>
     <string name="search_brave">Drąsus</string>
     <string name="search_swisscow">Šveicarijos karvės</string>
+    <string name="widgets_battery_level">Baterijos lygis: %d%%</string>
+    <string name="widgets_battery_count">Akumuliatoriaus įkrovos skaičius: %1$d</string>
+    <string name="widgets_battery_status">Įkrovimo būsena: %1$s</string>
+    <string name="widgets_battery_health">Baterijos būklė: %1$s</string>
+    <string name="widgets_battery_voltage">Baterijos įtampa: %1$d %2$s</string>
+    <string name="widgets_battery_temperature">Baterijos temperatūra: %1$d %2$s</string>
 </resources>
