--- a/app/src/main/res/values-nl-rNL/strings.xml
+++ b/app/src/main/res/values-nl-rNL/strings.xml
@@ -570,4 +570,10 @@
     <string name="search_bing">Bing</string>
     <string name="search_brave">Moedig</string>
     <string name="search_swisscow">Zwitserse koeien</string>
+    <string name="widgets_battery_level">Batterijniveau: %d%%</string>
+    <string name="widgets_battery_count">Aantal batterijladingen: %1$d</string>
+    <string name="widgets_battery_status">Oplaadstatus: %1$s</string>
+    <string name="widgets_battery_health">Batterijstatus: %1$s</string>
+    <string name="widgets_battery_voltage">Batterijspanning: %1$d %2$s</string>
+    <string name="widgets_battery_temperature">Batterijtemperatuur: %1$d %2$s</string>
 </resources>
