--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -570,4 +570,10 @@
     <string name="search_bing">Bing</string>
     <string name="search_brave">Хоробрий</string>
     <string name="search_swisscow">SwissCows</string>
+    <string name="widgets_battery_level">Рівень заряду батареї: %d%%</string>
+    <string name="widgets_battery_count">Кількість зарядів батареї: %1$d</string>
+    <string name="widgets_battery_status">Стан зарядки: %1$s</string>
+    <string name="widgets_battery_health">Заряд батареї: %1$s</string>
+    <string name="widgets_battery_voltage">Напруга батареї: %1$d %2$s</string>
+    <string name="widgets_battery_temperature">Температура батареї: %1$d %2$s</string>
 </resources>
