--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -25,6 +25,7 @@
     <string name="bottom_dialog_app_uninstall">Odinstalovat aplikaci</string>
     <string name="settings_name">Nastavení spouštěče</string>
     <string name="settings_version">%1$s Verze: %2$s</string>
+    <string name="settings_widgets_name">Nastavení widgetů</string>
     <string name="settings_title_home_display_preferences">Zobrazit</string>
     <string name="settings_title_home_behavior_preferences">Chování</string>
     <string name="settings_title_home_appearance_preferences">Vzhled</string>
@@ -572,8 +573,13 @@
     <string name="search_swisscow">SwissCows</string>
     <string name="widgets_battery_level">Úroveň baterie: %d%%</string>
     <string name="widgets_battery_count">Počet nabití baterie: %1$d</string>
+    <string name="widgets_battery_current">Proud baterie: %1$d %2$s</string>
     <string name="widgets_battery_status">Stav nabíjení: %1$s</string>
     <string name="widgets_battery_health">Stav baterie: %1$s</string>
     <string name="widgets_battery_voltage">Napětí baterie: %1$d %2$s</string>
-    <string name="widgets_battery_temperature">Teplota baterie: %1$d %2$s</string>
+    <string name="widgets_battery_temperature">Teplota baterie: %1.2f %2$s</string>
+    <string name="widgets_settings_display_weather">Widget počasí</string>
+    <string name="widgets_settings_display_battery">Widget baterie</string>
+    <string name="widgets_settings_display">Zobrazit</string>
+    <string name="widgets_settings_select_order">Vyberte Objednat</string>
 </resources>
