--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -25,6 +25,7 @@
     <string name="bottom_dialog_app_uninstall">הסר את ההתקנה של האפליקציה</string>
     <string name="settings_name">הגדרות משגר</string>
     <string name="settings_version">%1$s גרסה: %2$s</string>
+    <string name="settings_widgets_name">הגדרות ווידג\'טים</string>
     <string name="settings_title_home_display_preferences">תצוגה</string>
     <string name="settings_title_home_behavior_preferences">התנהגות</string>
     <string name="settings_title_home_appearance_preferences">מראה חיצוני</string>
@@ -572,8 +573,13 @@
     <string name="search_swisscow">SwissCows</string>
     <string name="widgets_battery_level">רמת סוללה: %d%%</string>
     <string name="widgets_battery_count">ספירת טעינת סוללה: %1$d</string>
+    <string name="widgets_battery_current">זרם סוללה: %1$d %2$s</string>
     <string name="widgets_battery_status">מצב טעינה: %1$s</string>
     <string name="widgets_battery_health">בריאות הסוללה: %1$s</string>
     <string name="widgets_battery_voltage">מתח סוללה: %1$d %2$s</string>
-    <string name="widgets_battery_temperature">טמפרטורת הסוללה: %1$d %2$s</string>
+    <string name="widgets_battery_temperature">טמפרטורת סוללה: %1.2f %2$s</string>
+    <string name="widgets_settings_display_weather">ווידג\'ט מזג אוויר</string>
+    <string name="widgets_settings_display_battery">יישומון סוללה</string>
+    <string name="widgets_settings_display">לְהַצִיג</string>
+    <string name="widgets_settings_select_order">בחר הזמנה</string>
 </resources>
