--- a/app/src/main/res/values-sk-rSK/strings.xml
+++ b/app/src/main/res/values-sk-rSK/strings.xml
@@ -25,6 +25,7 @@
     <string name="bottom_dialog_app_uninstall">Odinštalovať aplikáciu</string>
     <string name="settings_name">Nastavenia spúšťača</string>
     <string name="settings_version">%1$s Verzia: %2$s</string>
+    <string name="settings_widgets_name">Nastavenia miniaplikácií</string>
     <string name="settings_title_home_display_preferences">Displej</string>
     <string name="settings_title_home_behavior_preferences">Správanie</string>
     <string name="settings_title_home_appearance_preferences">Vzhľad</string>
@@ -572,8 +573,13 @@
     <string name="search_swisscow">SwissCows</string>
     <string name="widgets_battery_level">Úroveň nabitia batérie: %d%%</string>
     <string name="widgets_battery_count">Počet nabití batérie: %1$d</string>
+    <string name="widgets_battery_current">Prúd batérie: %1$d %2$s</string>
     <string name="widgets_battery_status">Stav nabíjania: %1$s</string>
     <string name="widgets_battery_health">Stav batérie: %1$s</string>
     <string name="widgets_battery_voltage">Napätie batérie: %1$d %2$s</string>
-    <string name="widgets_battery_temperature">Teplota batérie: %1$d %2$s</string>
+    <string name="widgets_battery_temperature">Teplota batérie: %1.2f %2$s</string>
+    <string name="widgets_settings_display_weather">Widget počasia</string>
+    <string name="widgets_settings_display_battery">Widget batérie</string>
+    <string name="widgets_settings_display">Displej</string>
+    <string name="widgets_settings_select_order">Vyberte položku Objednávka</string>
 </resources>
