--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -25,6 +25,7 @@
     <string name="bottom_dialog_app_uninstall">Видалити додаток</string>
     <string name="settings_name">Налаштування програми запуску</string>
     <string name="settings_version">%1$s Версія: %2$s</string>
+    <string name="settings_widgets_name">Налаштування віджетів</string>
     <string name="settings_title_home_display_preferences">Дисплей</string>
     <string name="settings_title_home_behavior_preferences">Поведінка</string>
     <string name="settings_title_home_appearance_preferences">Зовнішній вигляд</string>
@@ -572,8 +573,13 @@
     <string name="search_swisscow">SwissCows</string>
     <string name="widgets_battery_level">Рівень заряду батареї: %d%%</string>
     <string name="widgets_battery_count">Кількість зарядів батареї: %1$d</string>
+    <string name="widgets_battery_current">Струм батареї: %1$d %2$s</string>
     <string name="widgets_battery_status">Стан зарядки: %1$s</string>
     <string name="widgets_battery_health">Заряд батареї: %1$s</string>
     <string name="widgets_battery_voltage">Напруга батареї: %1$d %2$s</string>
-    <string name="widgets_battery_temperature">Температура батареї: %1$d %2$s</string>
+    <string name="widgets_battery_temperature">Температура батареї: %1.2f %2$s</string>
+    <string name="widgets_settings_display_weather">Віджет погоди</string>
+    <string name="widgets_settings_display_battery">Віджет батареї</string>
+    <string name="widgets_settings_display">Дисплей</string>
+    <string name="widgets_settings_select_order">Виберіть Замовлення</string>
 </resources>
