--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -577,7 +577,7 @@
     <string name="widgets_battery_status">Stav nabíjení: %1$s</string>
     <string name="widgets_battery_health">Stav baterie: %1$s</string>
     <string name="widgets_battery_voltage">Napětí baterie: %1$d %2$s</string>
-    <string name="widgets_battery_temperature">Teplota baterie: %1.2f %2$s</string>
+    <string name="widgets_battery_temperature">Teplota baterie: %1$.2f %2$s</string>
     <string name="widgets_settings_display_weather">Widget počasí</string>
     <string name="widgets_settings_display_battery">Widget baterie</string>
     <string name="widgets_settings_display">Zobrazit</string>
