--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -602,7 +602,7 @@
     <string name="widgets_battery_status">Charging Status : %1$s</string>
     <string name="widgets_battery_health">Battery Health : %1$s</string>
     <string name="widgets_battery_voltage">Battery Voltage : %1$d %2$s</string>
-    <string name="widgets_battery_temperature">Battery Temperature : %1.2f %2$s</string>
+    <string name="widgets_battery_temperature">Battery Temperature : %1$.2f %2$s</string>
 
     <string name="widgets_settings_display_weather">Weather Widget</string>
     <string name="widgets_settings_display_battery">Battery Widget</string>
