--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -598,10 +598,10 @@
 
     <string name="widgets_battery_level">Battery Level : %d %%</string>
     <string name="widgets_battery_count">Battery Charge Count : %1$d</string>
-    <string name="widgets_battery_current">Battery Current : %1$d %2$s</string>
+    <string name="widgets_battery_current">Battery Current : %1$.2f %2$s</string>
     <string name="widgets_battery_status">Charging Status : %1$s</string>
     <string name="widgets_battery_health">Battery Health : %1$s</string>
-    <string name="widgets_battery_voltage">Battery Voltage : %1$d %2$s</string>
+    <string name="widgets_battery_voltage">Battery Voltage : %1$.2f %2$s</string>
     <string name="widgets_battery_temperature">Battery Temperature : %1$.2f %2$s</string>
 
     <string name="widgets_settings_display_weather">Weather Widget</string>
