--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -573,10 +573,10 @@
     <string name="search_swisscow">Mucche svizzere</string>
     <string name="widgets_battery_level">Livello della batteria: %d%%</string>
     <string name="widgets_battery_count">Conteggio carica batteria: %1$d</string>
-    <string name="widgets_battery_current">Corrente della batteria: %1$d %2$s</string>
+    <string name="widgets_battery_current">Corrente della batteria: %1$.2f %2$s</string>
     <string name="widgets_battery_status">Stato di carica: %1$s</string>
     <string name="widgets_battery_health">Stato della batteria: %1$s</string>
-    <string name="widgets_battery_voltage">Voltaggio della batteria: %1$d %2$s</string>
+    <string name="widgets_battery_voltage">Voltaggio della batteria: %1$.2f %2$s</string>
     <string name="widgets_battery_temperature">Temperatura della batteria: %1$.2f %2$s</string>
     <string name="widgets_settings_display_weather">Widget meteo</string>
     <string name="widgets_settings_display_battery">Widget batteria</string>
