Lang: Updated Language Files. (#76)
* New translations strings.xml (Czech)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (German)

* New translations strings.xml (Czech)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (German)

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -582,4 +582,9 @@
     <string name="widgets_settings_display_battery">Batterie-Widget</string>
     <string name="widgets_settings_display">Anzeige</string>
     <string name="widgets_settings_select_order">Bestellung auswählen</string>
+    <string name="acra_crash">Absturz</string>
+    <string name="acra_dialog_text">Es tut uns leid, aber bei %1$s ist ein unerwartetes Problem aufgetreten und es muss geschlossen werden. Bitte helfen Sie uns, uns zu verbessern, indem Sie einen Absturzbericht senden.\n\n%1$s schätzt Ihre Privatsphäre und die gesammelten Daten werden ausschließlich zur Verbesserung der App-Stabilität verwendet. Es werden keine persönlichen Daten gesammelt. Vielen Dank für Ihre Unterstützung!</string>
+    <string name="acra_send_report">Bericht senden</string>
+    <string name="acra_dont_send">Nicht senden</string>
+    <string name="acra_mail_body">Bitte beschreiben Sie das aufgetretene Problem:</string>
 </resources>
