--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -582,4 +582,9 @@
     <string name="widgets_settings_display_battery">Widget baterie</string>
     <string name="widgets_settings_display">Zobrazit</string>
     <string name="widgets_settings_select_order">Vyberte Objednat</string>
+    <string name="acra_crash">Pád</string>
+    <string name="acra_dialog_text">Je nám líto, ale %1$s došlo k neočekávanému problému a je třeba ji zavřít. Pomozte nám zlepšit se zasláním zprávy o selhání.\n\n%1$s si váží vašeho soukromí a shromážděná data slouží výhradně ke zlepšení stability aplikace. Neshromažďují se žádné osobní údaje. Děkuji za vaší podporu!</string>
+    <string name="acra_send_report">Poslat zprávu</string>
+    <string name="acra_dont_send">Neposílejte</string>
+    <string name="acra_mail_body">Popište prosím problém, na který jste narazili:</string>
 </resources>
