--- a/app/src/main/res/values-nl-rNL/strings.xml
+++ b/app/src/main/res/values-nl-rNL/strings.xml
@@ -582,4 +582,9 @@
     <string name="widgets_settings_display_battery">Batterijwidget</string>
     <string name="widgets_settings_display">Weergave</string>
     <string name="widgets_settings_select_order">Selecteer bestelling</string>
+    <string name="acra_crash">Botsing</string>
+    <string name="acra_dialog_text">Het spijt ons, maar %1$s heeft een onverwacht probleem ondervonden en moet worden afgesloten. Help ons alstublieft verbeteren door een crashrapport te sturen.\n\n%1$s waardeert uw privacy en de verzamelde gegevens worden uitsluitend gebruikt voor het verbeteren van de app-stabiliteit. Er worden geen persoonlijke gegevens verzameld. Bedankt voor je ondersteuning!</string>
+    <string name="acra_send_report">Verzend rapport</string>
+    <string name="acra_dont_send">Niet verzenden</string>
+    <string name="acra_mail_body">Beschrijf het probleem dat u bent tegengekomen:</string>
 </resources>
