Feat: Added a toggle for sun set and sun rise info.
Signed-off-by: HeCodes2Much <wayne6324@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -604,8 +604,9 @@
     <string name="widgets_battery_voltage">Battery Voltage : %1$.2f %2$s</string>
     <string name="widgets_battery_temperature">Battery Temperature : %1$.2f %2$s</string>
 
-    <string name="widgets_settings_display_weather">Weather Widget</string>
-    <string name="widgets_settings_display_battery">Battery Widget</string>
+    <string name="widgets_settings_show_weather">Weather Widget</string>
+    <string name="widgets_settings_show_weather_sun">Show Sunset &amp; Sunrise</string>
+    <string name="widgets_settings_show_battery">Battery Widget</string>
     <string name="widgets_settings_display">Display</string>
     <string name="widgets_settings_select_order">Select Order</string>
 
