--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -85,6 +85,7 @@
     <string name="settings_actions_show_notifications">Mostra notifiche</string>
     <string name="settings_actions_show_app_list">Mostra elenco app</string>
     <string name="settings_actions_show_favorite_list">Mostra elenco preferiti</string>
+    <string name="settings_actions_show_hidden_list">Mostra elenco nascosto</string>
     <string name="settings_actions_open_quick_settings">Apri Impostazioni rapide</string>
     <string name="settings_actions_show_recents">Mostra recenti</string>
     <string name="settings_actions_show_widgets">Mostra widget</string>
