--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -588,5 +588,5 @@
     <string name="acra_dialog_text">Нам дуже шкода, але %1$s зіткнувся з неочікуваною проблемою та має закритися. Будь ласка, допоможіть нам покращити, надіславши звіт про збій.\n\n%1$s цінує вашу конфіденційність, а зібрані дані використовуються виключно для покращення стабільності програми. Особиста інформація не збирається. Спасибі вам за вашу підтримку!</string>
     <string name="acra_send_report">Надіслати звіт</string>
     <string name="acra_dont_send">Не надсилайте</string>
-    <string name="acra_mail_body">Опишіть проблему, з якою ви зіткнулися:</string>
+    <string name="acra_mail_body">У програмі стався збій.\n\nНижче наведено деталі пристрою. Журнал помилок долучено як файл для ознайомлення. Ми будемо вдячні за вашу допомогу у вирішенні цієї проблеми.\n\nІнформація про пристрій: \n[БУДЬ ЛАСКА, заповніть інформацію нижче, видаливши все, що знаходиться в квадратних дужках, інакше це буде проігноровано.]\n\n- Версія програми: [0.0.1]\n- Версія Android: [14]\n- Назва пристрою: [Android Pixel 69]\n- Місце встановлення: [github, fdroid, obtanium, self]\n\nМи дуже вдячні за вашу швидку увагу до цього питання.\n\nДякую.\n</string>
 </resources>
