Lang: Updated Language Files. (#91)
* New translations strings.xml (Czech)

* New translations strings.xml (German)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Czech)

* New translations strings.xml (German)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Italian)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Slovak)

* New translations strings.xml (Ukrainian)

--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -84,6 +84,7 @@
     <string name="settings_reload_app_backup">Předvolby zálohovány.</string>
     <string name="settings_reload_app_restore">Předvolby byly obnoveny. Restartování.</string>
     <string name="settings_actions_open_app">Otevřete aplikaci</string>
+    <string name="settings_actions_open_app_run">Otevřete %s</string>
     <string name="settings_actions_lock_screen">Uzamknout obrazovku</string>
     <string name="settings_actions_show_notifications">Ukázat notifikace</string>
     <string name="settings_actions_show_app_list">Zobrazit seznam aplikací</string>
